--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,101 @@
  *= require_tree .
  *= require_self
  */
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.form-container {
+  padding: 20px; /* Add padding to the container */
+}
+
+.centered-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full viewport height */
+  padding: 20px; /* Optional: Add padding for spacing */
+  text-align: center; /* Center text within the container */
+  box-sizing: border-box;
+}
+
+form {
+  width: 100%; /* Ensure form takes full width */
+  padding: 30px; /* Add padding for spacing inside the form */
+  box-sizing: border-box; /* Include padding in the element's total width and height */
+}
+
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px; /* Optional: add some space between the fields */
+  flex-wrap: wrap;
+}
+
+.form-group {
+  flex: 1;
+  min-width: 150px;
+  margin-bottom: 20px; /* Add margin between fields */
+}
+
+.form-group label {
+  display: block;
+}
+
+.form-header {
+  margin-bottom: 20px; /* Add margin below the header */
+  font-size: 1.2em; /* Increase the font size */
+}
+
+.form-control {
+  width: 100%;
+  padding: 8px; /* Decrease padding for smaller input boxes */
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  box-sizing: border-box; /* Include padding in the element's total width and height */
+}
+
+.question-index {
+  font-weight: bold; /* Make the index bold */
+  color: #000; /* Use a color that stands out, like black */
+  margin-right: 5px; /* Add some space between the index and the question */
+  font-size: 1em; /* Optional: Increase the font size to make it stand out more */
+}
+
+.options-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px; /* Add some space between options */
+}
+
+.form-check {
+  display: flex; /* Use flexbox for layout */
+  align-items: center;
+  margin-bottom: 15px; /* Add margin between radio options */
+}
+
+.form-check-input {
+  margin-right: 5px;
+}
+
+.btn {
+  padding: 12px 20px; /* Increase padding for a bigger button */
+  border: none;
+  border-radius: 4px;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: #007bff;
+}
+
+.btn-primary:hover {
+  background-color: #0056b3;
+}
